# escpos-rw

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  space_split.rs  tables.rs
src/: error.rs  formatter.rs  lib.rs  printer.rs
src/printer/: printer_model.rs  printer_profile.rs
