[package]
name = "escpos-rw"
version = "1.0.0"
license = "MIT"
description = "Low level communication with esc/pos"
repository = "https://github.com/nicolasbauw/escpos-rw"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.3"
log = "0.4.14"
serde = {version = "1.0.117", features = ["derive"]}
codepage-437 = "0.1.0"
image = "0.23.14"
base64 = "0.13.0"
qrcode = "0.12.0"