[package]
name = "escpos-rw"
version = "0.9.0"
license = "MIT"
description = "Low level communication with esc/pos"
repository = "https://github.com/nicolasbauw/escpos-rw"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.4"
